force-app/main/default/objects/VSA_Open_Order__c/VSA_Open_Order__c.object-meta.xml
<CustomObject>
    <label>VSA_Open_Orders</label>
    <nameField>
        <label>VSA_Open_Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VSA_Open_Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>