force-app/main/default/objects/VSA_Open_Order__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oracle_Orders</relationshipLabel>
    <relationshipName>Oracle_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>