force-app/main/default/objects/VSA_Open_Order__c/fields/CQ_Pending_Orders__c.field-meta.xml
<CustomField>
    <fullName>CQ_Pending_Orders__c</fullName>
    <formula>Status__c == &apos;Pending&apos; &amp;&amp; 
    CASE(MONTH(TODAY()),        
         2,3,
         3,3,
         4,3,
         5,4,
         6,4,
         7,4,
         8,1,
         9,1,
         10,1,
         2) =
      CASE(MONTH(Ship_Date__c),
           2,3,
           3,3,
           4,3,
           5,4,
           6,4,
           7,4,
           8,1,
           9,1,
          10,1,
          2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CQ Pending Orders</label>
    <type>Checkbox</type>
</CustomField>