force-app/main/default/objects/VSA_Open_Order__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <length>200</length>
    <type>Text</type>
</CustomField>