force-app/main/default/objects/VSA_Open_Order__c/fields/Oracle_Channel__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Channel__c</fullName>
    <label>Oracle Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>