force-app/main/default/objects/VSA_Open_Order__c/fields/Order_QTY__c.field-meta.xml
<CustomField>
    <fullName>Order_QTY__c</fullName>
    <label>Order QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>