force-app/main/default/objects/VSA_Open_Order__c/fields/Packing_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Packing_Instructions__c</fullName>
    <label>Packing Instructions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>