force-app/main/default/objects/VSA_Open_Order__c/fields/Ship_State__c.field-meta.xml
<CustomField>
    <fullName>Ship_State__c</fullName>
    <label>Ship State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>