force-app/main/default/objects/VSA_Open_Order__c/fields/Ship_to_Address_2__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Address_2__c</fullName>
    <label>Ship to Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>