force-app/main/default/objects/VSA_Open_Order__c/fields/Ship_to_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Instructions__c</fullName>
    <label>Ship to Instructions</label>
    <length>13000</length>
    <type>LongTextArea</type>
</CustomField>