force-app/main/default/objects/VSA_Open_Order__c/fields/ShippedNotInPOS__c.field-meta.xml
<CustomField>
    <fullName>ShippedNotInPOS__c</fullName>
    <formula>Status__c == &apos;Shipped&apos; &amp;&amp;  Ship_Date__c &gt; today()-DaysSincePOS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ShippedNotInPOS</label>
    <type>Checkbox</type>
</CustomField>