force-app/main/default/objects/VSA_Open_Order__c/fields/Spa_Number__c.field-meta.xml
<CustomField>
    <fullName>Spa_Number__c</fullName>
    <label>Spa Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>