force-app/main/default/objects/VSA_Open_Order__c/fields/SpaId__c.field-meta.xml
<CustomField>
    <fullName>SpaId__c</fullName>
    <formula>substitute(
substitute(
 substitute( 
substitute( 
substitute(Spa_Number__c,&quot; &quot;,&quot;&quot;)
,&quot;BR&quot;,&quot;&quot;)
,&quot;ACC&quot;,&quot;&quot;)
,&quot;/&quot;,&quot;&quot;)
,&quot;FTZ&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SpaId</label>
    <type>Text</type>
</CustomField>