force-app/main/default/objects/VSA_Open_Order__c/listViews/Open_Orders.listView-meta.xml
<ListView>
    <fullName>Open_Orders</fullName>
    <columns>PO_Number__c</columns>
    <columns>Order_Number__c</columns>
    <columns>Status__c</columns>
    <columns>Ordered_Date__c</columns>
    <columns>Product__c</columns>
    <columns>Qty__c</columns>
    <columns>Spa_Number__c</columns>
    <columns>Ship_to_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order_Number__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Orders Open and Recently Shipped</label>
    <language>en_US</language>
</ListView>